Fix: Fixing itens alignment in footer

--- a/app/styles.css
+++ b/app/styles.css
@@ -28,6 +28,7 @@ footer {
   height: 10%;
   display: flex;
   justify-content: flex-end;
+  align-items: center;
 }
 
 footer i {
